--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # API Configuration
 API_KEY=your-secure-api-key-here
 
+# Database Configuration (Turso)
+# Get these from: turso db show <database-name> --url
+# and: turso db tokens create <database-name>
+TURSO_DATABASE_URL=libsql://your-database.turso.io
+TURSO_AUTH_TOKEN=your-turso-auth-token-here
+
 # Site Configuration
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 NEXT_PUBLIC_SITE_NAME=Professional Blog
